# python-project-template

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .cruftignore  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.ai-context/: CURRENT.md
{{cookiecutter.project_slug}}/docs/: conf.py  index.rst
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  __main__.py
{{cookiecutter.project_slug}}/tasks/: __init__.py
