[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
readme = "README.md"
requires-python = ">={{cookiecutter.python_version}}"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py{{cookiecutter.python_version.replace('.', '')}}"
fix = true
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
addopts = [
    "--doctest-modules",
    "--cov=src/{{cookiecutter.project_slug}}",
    "--cov-report=term-missing",
    "--cov-report=html",
]
pythonpath = ["."]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 88
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "raise NotImplementedError",
]
skip_empty = true

[tool.mypy]
python_version = "{{cookiecutter.python_version}}"
ignore_missing_imports = true
strict = true
exclude = ["tasks/", "docs/"]

[dependency-groups]
dev = [
    "invoke>=2.2.0",
    "mypy>=1.20.0",
    "ruff>=0.14.9",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "sphinx>=7.0.0",
    "furo>=2024.1.0",
]
